--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -144,6 +144,11 @@ Cette version n'est donc interessante que pour des
 tableaux très proche d'un tableau ordonné
 dés le début.
 
+<iframe src="https://www.desmos.com/calculator/q3f839jk3k?embed" width="500px" height="500px" style="border: 1px solid #ccc" frameborder=0></iframe>
+
+
+<a title="View with the Desmos Graphing Calculator" href="https://www.desmos.com/calculator/rp8zi6rtqr">  <img src="https://s3.amazonaws.com/calc_thumbs/production/rp8zi6rtqr.png" width="200px" height="200px"     style="border:1px solid #ccc; border-radius:5px"  /></a>
+
 $$ \bbox[20px,border:2px solid red]
 {
     O(n^2) 
