--- a/_posts/2017-05-20-Algo-tri.markdown
+++ b/_posts/2017-05-20-Algo-tri.markdown
@@ -694,3 +694,5 @@ Cette méthode de tri est stable, les valeurs rentrent dans les filles dans un c
 <br>
 
 > * on peut trier les valeurs au fur et à mesure. Pour les autres, il est nécéssaire de les avoir toutes avant de commencer. En $ O(n) $ dans le meilleur cas.
+
+test
